--- a/templates/_base.html
+++ b/templates/_base.html
@@ -29,3 +29,7 @@
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.6/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.6/dist/js/uikit-icons.min.js"></script>
 {{end}}
+
+{{ define "btn-example" }}
+<a href="/showcase" class="uk-button uk-button-primary uk-border-rounded">Showcase</a>
+{{}}
