--- a/templates/_base.html
+++ b/templates/_base.html
@@ -32,4 +32,23 @@
 
 {{ define "btn-example" }}
 <a href="/showcase" class="uk-button uk-button-primary uk-border-rounded">Showcase</a>
-{{}}
+{{end}}
+
+{{ define "pairs" }}
+<table class="uk-table uk-table-small uk-table-divider">
+    <thead>
+        <tr>
+            <th>Table Heading</th>
+            <th>Table Heading</th>
+            <th>Table Heading</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Table Data</td>
+            <td>Table Data</td>
+            <td>Table Data</td>
+        </tr>
+    </tbody>
+</table>
+{{end}}
