--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,19 +1,7 @@
 {{define "head"}}
 <head>
     <meta charset="utf-8" />
-    <title>Webapp Template</title>
-    <meta name="description" content="page description" />
-    <meta name="keywords" content="app,blank,keywords" />
-
-    <meta property="og:type" content="website" />
-    <meta property="og:site_name" content="Webapp Template" />
-    <meta property="og:title" content="Webapp Template" />
-    <meta property="og:description" content="page description" />
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="img/preview.png" />
-    <meta property="og:image:width" content="968" />
-    <meta property="og:image:height" content="504" />
+    <title>CRP Exchange Widgets</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- UIkit CSS -->
