--- a/templates/_base.html
+++ b/templates/_base.html
@@ -6,16 +6,26 @@
 
     <!-- UIkit CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.2.6/dist/css/uikit.min.css" />
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="/assets/css/custom.css?v=1.1" />
+
 
     <link rel="icon" type="image/png" href="/assets/img/favicon.png" />
 </head>
 {{end}}
 
 {{define "scripts"}}
+
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.6/dist/js/uikit.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/uikit@3.2.6/dist/js/uikit-icons.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
+
+
 {{end}}
 
 {{ define "btn-example" }}
